--- a/doc/Aspettative/Aspettative.tex
+++ b/doc/Aspettative/Aspettative.tex
@@ -2,7 +2,7 @@
 \usepackage{multirow}
 \begin{document}
 
-\renewcommand{\insertversion}{0.4} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{1.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x
 \renewcommand{\TITOLODOC}{Decomposizione del Capitolato in Aspettative} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 
 \begin{titlepage}
@@ -39,7 +39,7 @@
 \end{center}
 \vspace{100pt}
 \begin{center}
-Versione: \insertversion
+%Versione: \insertversion
 \end{center}
 \end{titlepage}
 
@@ -82,7 +82,7 @@ Versione: \insertversion
 
 \subsezione{Altamente Desiderabili (ACD)}
 \begin{elenconumerato}[\textbf{ACD-}]{\subsecindent}
-\item Il sistema prevede la pubblicazione sul sito "www.sourceforge.net", in conformit\`a con i relativi requisiti di natura open-source, per favorire la continuit\`a del prodotto risultante.
+\item Il sistema prevede la pubblicazione sul sito \href{www.sourceforge.net}{www.sourceforge.net}, in conformit\`a con i relativi requisiti di natura Open Source, per favorire la continuit\`a del prodotto risultante.
 \end{elenconumerato}
 
 \subsezione{Facoltative (ACF)}
@@ -97,7 +97,7 @@ Versione: \insertversion
 \item connettori per diagrammi
 \end{list}
 
-\item Il sistema AJAXDRAW prevede la compatibilit\`a con i browser che non implementano a pieno HTML 5 (p. es. Internet Explorer). Usufruendo della libreria "excanvas", open source disponibile su googlecode, creata appositamente per la simulazione degli oggetti canvas, sar\`a possibile far funzionare il disegnatore web su questi browser. 
+\item Il sistema AJAXDRAW prevede la compatibilit\`a con i browser che non implementano a pieno HTML 5 (p. es. Internet Explorer). Usufruendo della libreria \H{}excanvas\H{}, Open Source disponibile su \href{http://code.google.com/p/explorercanvas/}{Google Code}, creata appositamente per la simulazione degli oggetti canvas, sar\`a possibile far funzionare il disegnatore web su questi browser. 
 \end{elenconumerato}
 
 \end{document}
