--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{0.1} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{1.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Glossario} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -121,7 +121,6 @@ Glossario
 
 	\begin{elenconumerato}{\normindent}
 		\item WebShape 
-		%\item Il committente Conte Renato
 	\end{elenconumerato}
 
 \newpage
@@ -140,9 +139,12 @@ Glossario
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-    	 	0.1 &	 06$\slash$12$\slash$2008 Aggiunta termini da AnalisiDeiRequisiti & Piero Bizzotto \\
+			\hline
+			1.0 & 09$\slash$12$\slash$2008  Verifica finale in preparazione al rilascio. & Bizzotto Piero \\
+			\hline
+    	 	0.1 &	 06$\slash$12$\slash$2008 Aggiunta termini da AnalisiDeiRequisiti & Bizzotto Piero\\
     	 	\hline
-    	 	0.0 & 	 04$\slash$12$\slash$2008 Struttura e aggiunta termini da NormeDiProgetto & Mirco Geremia \\
+    	 	0.0 & 	 04$\slash$12$\slash$2008 Struttura e aggiunta termini da NormeDiProgetto & Geremia Mirco \\
 
 		\hline %%FINE RIGA
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -187,6 +189,12 @@ Con il termine OpenSource si indica un tipo di licenza software in cui il codice
 \hypertarget{png}{}
 \textbf{PNG:}
 Il PNG (Portable Network Graphics) \`e un formato di file che permette di memorizzare immagini senza perdere informazioni.\\
+
+\section*{R}
+\hypertarget{rgb}{}
+\textbf{RGB:}
+RGB (Red, Green, Blue) \`e  il nome di un modello di colori di tipo additivo che si basa sui tre colori rosso, verde e blu, da cui appunto il nome RGB, da non confondere con i colori primari sottrattivi giallo, ciano e magenta (chiamati anche giallo, rosso e blu).
+Un'immagine pu\`o  infatti essere scomposta, attraverso filtri o altre tecniche, in questi colori base che, miscelati tra loro, danno quasi tutto lo spettro dei colori visibili, con l'eccezione delle porpore.
 
 \section*{S}
 \hypertarget{svg}{}
