--- a/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
+++ b/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
@@ -54,17 +54,32 @@ Alla cortese attenzione dei committenti :
 \item Azienda Zucchetti SPA , nella veste di proponente
 \end{list}
 
-Con la presente la ditta WebShape intende ufficializzare, in data (data presentazione documenti), la sua partecipazione alla gara di appalto per il capitolato C04 "Software per il disegno grafico in tecnologie web" (in seguito definito "AJAXDRAW"). Il rilascio finale del prodotto e' previsto dall' azienda per la fine del secondo trimestre universitario, indicativamente verso fine Marzo 2009 ed inizio Aprile dello stesso anno. 
+Con la presente la ditta WebShape intende ufficializzare, in data 09/12/2008, la sua partecipazione alla gara di appalto per il capitolato C04 "Software per il disegno grafico in tecnologie web" (in seguito definito "AJAXDRAW"). Il rilascio finale del prodotto \`e previsto dall' azienda per la fine del secondo trimestre universitario, indicativamente verso fine Marzo 2009 ed inizio Aprile dello stesso anno. 
 
 \section{Licenza di distribuzione del prodotto} 
-WebShape, dopo un' attenta analisi, ha deciso di adottare per il progetto la licenza GPL, in quanto garantisce che il prodotto sia e rimanga liberamente utilizzabile, modificabile e distribuibile. Inoltre assicura che eventuali modifiche ad opera di terzi godano anch'esse delle suddette caratteristiche.
+WebShape, dopo un'attenta analisi, ha deciso di adottare per il progetto la licenza GPL, in quanto garantisce che il prodotto sia e rimanga liberamente utilizzabile, modificabile e distribuibile. Inoltre assicura che eventuali modifiche ad opera di terzi godano anch'esse delle suddette caratteristiche.
 
 \section{Sistema di versionamento dei file} 
-Il sistema di nomenclatura dei file usato da WebShape non prevede l' inserimento della versione attuale del documento nel nome del file. Il sistema di configurazione e versionamento adottato dall' azienda e' tale che la versione visibile sia sempre quella                   piu' aggiornata. Tuttavia solo i documenti che saranno consegnati per le revisioni avranno la versione nel nome del file. 
+Il sistema di nomenclatura dei file usato da WebShape non prevede l'inserimento della versione attuale del documento nel nome del file. Il sistema di configurazione e versionamento adottato dall' azienda \`e tale che la versione visibile sia sempre quella piu' aggiornata. Tuttavia solo i documenti che saranno consegnati per le revisioni avranno la versione nel nome del file. 
 
 \section{Documenti consegnati}
 Per la Revisione dei Requisiti verranno consegnati i seguenti documenti: 
 \subsection{Documenti interni}
+\begin{list}{-}{}
+\item Norme di progetto (NormeDiProgetto1.0.pdf)
+\item Studio di fattibilit\`a (StudioDiFattiblit\`a1.0.pdf)
+\end{list}
 \subsection{Documenti esterni}
+\begin{list}{-}{}
+\item Analisi dei requisiti (AnalisiDeiRequisit1.0.pdf)
+\item Aspettative (Aspettative.pdf)
+\item Diagramma di Gantt per le attivit\`a (PianificazioneProgetto.png)
+\item Diagramma di Gantt per le risorse (PianificazioneProgettoRisorse.png)
+\item Glossario (Glossario.pdf)
+\item Lettera di presentazione (LetteraDiPresentazione.pdf)
+\item Piano di progetto (PianoDiProgetto1.0.pdf)
+\item Piano di qualifica (PianoDiQualifica1.0.pdf)
+\item Relazione dell'incontro con i committenti (RelazioneIncontro.pdf)
+\end{list}
 
 \end{document}
