--- a/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
+++ b/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
@@ -75,7 +75,7 @@ Per la Revisione dei Requisiti verranno consegnati i seguenti documenti:
 \item Aspettative (Aspettative.pdf)
 \item Diagramma di Gantt per le attivit\`a (PianificazioneProgetto.png)
 \item Diagramma di Gantt per le risorse (PianificazioneProgettoRisorse.png)
-\item Glossario (Glossario.pdf)
+\item Glossario (Glossario1.0.pdf)
 \item Lettera di presentazione (LetteraDiPresentazione.pdf)
 \item Piano di progetto (PianoDiProgetto1.0.pdf)
 \item Piano di qualifica (PianoDiQualifica1.0.pdf)
