Gl: varie modifiche

--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -65,7 +65,7 @@ Glossario
 
 \section*{\LARGE Stato del documento:}
 \indent \indent
-	Formale Interno
+	Formale Esterno
 
 \section*{\LARGE Redazione:}
 	\begin{table}[!h]
@@ -80,7 +80,7 @@ Glossario
 				%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 				\hline
 				%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%		
-				{Pre-RR} & Piero Bizzotto \\ & Mirco Geremia\\
+				{Pre-RR} &  Bizzotto Piero \\ & Geremia Mirco \\
 				\hline
 				{RR-RPP} & \\
 				\hline
@@ -105,7 +105,7 @@ Glossario
 			%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%
 			\hline
 			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-			{Pre-RR} &  Stefano Dissegna\\
+			{Pre-RR} &  Dissegna Stefano \\
 			\hline
 			{RR-RPP} & \\
 			\hline
@@ -121,6 +121,7 @@ Glossario
 
 	\begin{elenconumerato}{\normindent}
 		\item WebShape 
+     	\item I committenti Conte Renato e Vardanega Tullio in rappresentanza \\  dell'azienda proponente Zucchetti SPA
 	\end{elenconumerato}
 
 \newpage
@@ -140,9 +141,13 @@ Glossario
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
 			\hline
-			1.0 & 09$\slash$12$\slash$2008  Verifica finale in preparazione al rilascio. & Bizzotto Piero \\
+			1.0 & 09$\slash$12$\slash$2008  Verifica finale in preparazione al rilascio & Bizzotto Piero \\
 			\hline
-    	 	0.1 &	 06$\slash$12$\slash$2008 Aggiunta termini da AnalisiDeiRequisiti & Bizzotto Piero\\
+			0.3  &    08$\slash$12$\slash$2008 Aggiunta altri termini & Dal Bosco Davide \\
+			\hline
+			0.2&    06$\slash$12$\slash$2008 Aggiunta altri termini & Dissegna Stefano \\
+			\hline
+    	 	0.1 &	 05$\slash$12$\slash$2008 Aggiunta termini da AnalisiDeiRequisiti & Bizzotto Piero\\
     	 	\hline
     	 	0.0 & 	 04$\slash$12$\slash$2008 Struttura e aggiunta termini da NormeDiProgetto & Geremia Mirco \\
 
