riferimenti al glossario

--- a/doc/Aspettative/Aspettative.tex
+++ b/doc/Aspettative/Aspettative.tex
@@ -73,21 +73,21 @@
 \item ridimensionare gli oggetti
 \end{list}
 
-\item Il sistema sar\`a in grado di leggere e salvare il contenuto dell'area di disegno in formato SVG.
-\item Il sistema sar\`a implementato seguendo gli standard del linguaggio di markup HTML 5. Il software dovr\`a quindi essere in grado di funzionare perfettamente in quei browser che implementano gli standard HTML 5 (Firefox, Safari, Opera e Chrome). 
-\item Il software utilizzer\`a il tag "canvas" appositamente creato per l'elaborazione del disegno vettoriale su web.
+\item Il sistema sar\`a in grado di leggere e salvare il contenuto dell'area di disegno in formato \underline{SVG}.
+\item Il sistema sar\`a implementato seguendo gli standard del \underline{linguaggio di markup} HTML 5. Il software dovr\`a quindi essere in grado di funzionare perfettamente in quei browser che implementano gli standard HTML 5 (Firefox, Safari, Opera e Chrome). 
+\item Il software utilizzer\`a il tag \underline{canvas} appositamente creato per l'elaborazione del disegno vettoriale su web.
 \item Il software AJAXDRAW deve fornire la possibilit\`a di attivare un aiuto (manuale), per l'utilizzazione del sistema. 
 \item Il sistema AJAXDRAW deve fornire un manuale per chiunque voglia estendere l'applicazione. 
 \end{elenconumerato}
 
 \subsezione{Altamente Desiderabili (ACD)}
 \begin{elenconumerato}[\textbf{ACD-}]{\subsecindent}
-\item Il sistema prevede la pubblicazione sul sito \href{www.sourceforge.net}{www.sourceforge.net}, in conformit\`a con i relativi requisiti di natura Open Source, per favorire la continuit\`a del prodotto risultante.
+\item Il sistema prevede la pubblicazione sul sito \href{www.sourceforge.net}{www.sourceforge.net}, in conformit\`a con i relativi requisiti di natura \underline{OpenSource,} per favorire la continuit\`a del prodotto risultante.
 \end{elenconumerato}
 
 \subsezione{Facoltative (ACF)}
 \begin{elenconumerato}[\textbf{ACF-}]{\subsecindent}
-\item Il sistema AJAXDRAW prevede di avvicinarsi il pi\`u possibile al programma client (open e free) "Inkscape". 
+\item Il sistema AJAXDRAW prevede di avvicinarsi il pi\`u possibile al programma client (OpenSource e free) "Inkscape". 
 \item Il sistema AJAXDRAW prevede di implementare le seguenti funzioni:
 
 \begin{list}{-}{}
