corretti nomi file

--- a/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
+++ b/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
@@ -73,8 +73,8 @@ Per la Revisione dei Requisiti verranno consegnati i seguenti documenti:
 \begin{list}{-}{}
 \item Analisi dei requisiti (AnalisiDeiRequisit1.0.pdf)
 \item Aspettative (Aspettative.pdf)
-\item Diagramma di Gantt per le attivit\`a (PianificazioneProgetto.png)
-\item Diagramma di Gantt per le risorse (PianificazioneProgettoRisorse.png)
+\item Diagramma di Gantt per le attivit\`a (Pianifica.png)
+\item Diagramma di Gantt per le risorse (PianificaRisorse.png)
 \item Glossario (Glossario1.0.pdf)
 \item Lettera di presentazione (LetteraDiPresentazione.pdf)
 \item Piano di progetto (PianoDiProgetto1.0.pdf)
