--- a/doc/NormeDiProgetto/NormeDiProgetto.tex
+++ b/doc/NormeDiProgetto/NormeDiProgetto.tex
@@ -140,6 +140,9 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%
+			
+			1.0 &    09$\slash$12$\slash$2008  Verifica finale in preparazione al rilascio & Geremia Mirco \\
+			\hline
 			0.3 &	05$\slash$12$\slash$2008 Correzioni sintattiche in seguito alla verifica & Geremia Mirco\\
 			\hline						
 			0.2 & 	 02$\slash$12$\slash$2008 Aggiunto Strumenti di sviluppo & Geremia Mirco \\
@@ -194,7 +197,7 @@ Il gruppo si incontra settimanalmente per aggiornarsi e verificare lo stato di a
 L'azienda si serve del sistema di mailing-list offerto da Google (\href{http://groups.google.it/}{http://groups.google.it/}) per discutere le diverse problematiche inerenti al progetto e per aggiornamenti di ogni tipo.
 
 \sezione{Strumenti di sviluppo}
-L'azienda sceglie di utilizzare software con licenze \underline{OpenSource} poich\`e rispecchiano le linee di pensiero dei componenti del gruppo. Inoltre tutto il software utilizzato \`e disponibile gratuitamente, per non gravare sui costi finali del prodotto.
+L'azienda sceglie di utilizzare software con licenze \underline{Open Source} poich\`e rispecchiano le linee di pensiero dei componenti del gruppo. Inoltre tutto il software utilizzato \`e disponibile gratuitamente, per non gravare sui costi finali del prodotto.
 
 \subsezione{Sistema di versionamento}
 Per il versionamento si usa il sistema Git (\href{http://git.or.cz/}{http://git.or.cz/}) nella sua ultima versione disponibile (1.6.0.4) e come repository comune GitHub (\href{http://github.com}{http://github.com}) poich\`e offre una comoda interfaccia grafica per visualizzare le modifiche effettuate, e non aggiunge costi in quanto gratuito nella sua versione base. GitHub offre inoltre un \underline{wiki} utilizzabile all'occorrenza.\\
