--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -143,9 +143,9 @@ Glossario
 		
 			1.0 & 09$\slash$12$\slash$2008  Verifica finale in preparazione al rilascio & Bizzotto Piero \\
 			\hline
-			0.3  &    08$\slash$12$\slash$2008 Aggiunta altri termini & Dal Bosco Davide \\
+			0.3  &    08$\slash$12$\slash$2008 Aggiunta altri termini & Geremia Mirco \\
 			\hline
-			0.2&    06$\slash$12$\slash$2008 Aggiunta altri termini & Dissegna Stefano \\
+			0.2&    06$\slash$12$\slash$2008 Aggiunta altri termini & Geremia Mirco \\
 			\hline
     	 	0.1 &	 05$\slash$12$\slash$2008 Aggiunta termini da AnalisiDeiRequisiti & Bizzotto Piero\\
     	 	\hline
