Gl: tolto sommario

--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -59,9 +59,9 @@ Versione: \insertversion
 \end{center}
 
 %\setlength{\parindent}{18pt} %settato indentazione di default 
-\section*{\LARGE Sommario:} %SEZIONE SOMMARIO
-\indent \indent
-Glossario
+%\section*{\LARGE Sommario:} %SEZIONE SOMMARIO
+%\indent \indent
+%Glossario
 
 \section*{\LARGE Stato del documento:}
 \indent \indent
