SF,Rel.Inc.:mod. per rilascio

--- a/doc/RelazioneIncontro/RelazioneIncontro.tex
+++ b/doc/RelazioneIncontro/RelazioneIncontro.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{0.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{1.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Relazione Incontro Zucchetti} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -139,8 +139,10 @@ Questa \`e la relazione dell'incontro svoltosi il 25$\slash$11$\slash$2008 tra a
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-			
+	 	    	1.0    & 09$\slash$12$\slash$2008 Verifica finale in preparazione al rilascio   & Bizzotto Piero  \\
+	 	    	\hline
+				0.1    & 02$\slash$12$\slash$2008 Correzione errori ortografici   & Bizzotto Piero  \\
+				\hline
 	 	    	0.0    & 29$\slash$11$\slash$2008 Prima stesura Documento   & Bizzotto Piero  \\
 
 		\hline %%FINE RIGA
