--- a/doc/StudioFattibilita/StudioDiFattibilita.tex
+++ b/doc/StudioFattibilita/StudioDiFattibilita.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{0.1} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{1.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Studio di Fattibilit\`{a}} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -142,6 +142,8 @@ Software per il Disegno Grafico in Tecnologie Web (in sigla AJAXDRAW).
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
+			1.0 & 	 09$\slash$12$\slash$2008 Verifica finale in preparazione al rilascio & Geremia Mirco \\
+			\hline
     	 	0.1 & 	 21$\slash$11$\slash$2008 Aggiornato Fattibilit\`a tecnologica & Geremia Mirco \\
     	 	\hline
     	 	0.0 & 	 19$\slash$11$\slash$2008 Prima bozza & Geremia Mirco \\
