PP,PQ: adattamento rilascio

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{0.3} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{1.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Piano di qualifica} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -125,7 +125,6 @@ Il presente documento descrive le strategie per la gestione della qualit\`a adot
 	\begin{elenconumerato}{\normindent}
 		\item WebShape
 		\item I committenti Conte Renato e Vardanega Tullio in rappresentanza \\  dell'azienda proponente Zucchetti SPA
-		%\item Il committente Conte Renato
 	\end{elenconumerato}
 
 \newpage
@@ -146,6 +145,8 @@ Il presente documento descrive le strategie per la gestione della qualit\`a adot
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			1.0 & 	 09$\slash$12$\slash$2008 Verifica finale in preparazione al rilascio & Dissegna Stefano\\
+			\hline
                  0.3 & 7/12/2008 Correzioni in seguito a revisione & Dissegna Stefano \\
 		 \hline
                  0.2 & 7/12/2008 Impaginazione e modifiche minori & Dissegna Stefano \\
