--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{0.9} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{1.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Piano di Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -150,6 +150,8 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+		1.0 & 	 09$\slash$12$\slash$2008 Verifica finale in preparazione al rilascio & Cunico Marco \\
+		\hline
           0.9 & 06/12/2008 Inserito secondo incremento e fine stesura del documento & Dal Bosco Davide\\
           \hline
           0.8 & 06/12/2008 Corretti errori di sintassi, impaginazione e inserito il primo incremento & Cunico Marco \\
