--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -147,12 +147,14 @@ Il presente documento descrive le strategie per la gestione della qualit\`a adot
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			1.0 & 	 09$\slash$12$\slash$2008 Verifica finale in preparazione al rilascio & Dissegna Stefano\\
 			\hline
-                 0.3 & 7/12/2008 Correzioni in seguito a revisione & Dissegna Stefano \\
-		 \hline
-                 0.2 & 7/12/2008 Impaginazione e modifiche minori & Dissegna Stefano \\
-		 \hline
-                 0.1 & 23/11/2008 Piano di qualifica per la progettazione & Dissegna Stefano \\ \hline
-                 0.0 & 22/11/2008 Bozza iniziale & Dissegna Stefano \\ \hline 
+             0.3 & 7/12/2008 Correzioni in seguito a revisione & Dissegna Stefano \\
+			 \hline
+            0.2 & 7/12/2008 Impaginazione e modifiche minori & Dissegna Stefano \\
+		 	\hline
+            0.1 & 23/11/2008 Piano di qualifica per la progettazione & Dissegna Stefano \\ 
+            \hline
+            0.0 & 22/11/2008 Bozza iniziale & Dissegna Stefano \\
+             \hline 
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular*}
 	\caption{tabella delle modifiche} %INSERIRE DIDASCALIA - SE NECESSARIA - 
