corretto errore ortografico

--- a/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
+++ b/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
@@ -71,7 +71,7 @@ Per la Revisione dei Requisiti verranno consegnati i seguenti documenti:
 \end{list}
 \subsection{Documenti esterni}
 \begin{list}{-}{}
-\item Analisi dei requisiti (AnalisiDeiRequisit1.0.pdf)
+\item Analisi dei requisiti (AnalisiDeiRequisiti1.0.pdf)
 \item Aspettative (Aspettative.pdf)
 \item Diagramma di Gantt per le attivit\`a (Pianifica.png)
 \item Diagramma di Gantt per le risorse (PianificaRisorse.png)
