corretto errore ortografico

--- a/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
+++ b/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
@@ -79,7 +79,7 @@ Per la Revisione dei Requisiti verranno consegnati i seguenti documenti:
 \item Lettera di presentazione (LetteraDiPresentazione.pdf)
 \item Piano di progetto (PianoDiProgetto1.0.pdf)
 \item Piano di qualifica (PianoDiQualifica1.0.pdf)
-\item Relazione dell'incontro con i committenti (RelazioneIncontro.pdf)
+\item Relazione dell'incontro con i committenti (RelazioneIncontro1.0.pdf)
 \end{list}
 
 \end{document}
