AR: cambiate alcune pre/post condizioni

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -234,7 +234,7 @@ L'utente avvia l'applicazione visualizzandone la relativa pagina web attraverso 
 \end{elenconumerato}
 \paragraph{Flusso alternativo}
 Se viene rilevato un browser non supportato, l'utente viene avvisato. L'utente pu\`o decidere di continuare ugualmente senza nessuna garanzia di corretto funzionamento.
-\paragraph{Precondizioni} Il browser \`e avviato.
+\paragraph{Precondizioni} Il browser \`e avviato. \`E possibile connettersi al server.
 \paragraph{Postcondizioni} L'applicazione \`e avviata.
 
 \subsezione{Interazione con l'applicazione}
