AR: aggiunta fonte requisiti

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -692,65 +692,65 @@ Il sistema consente di modificare la dimensione dei caratteri del testo di una c
 \sezione{Lista dei requisiti}
 \label{listarequisiti}
 I requisiti elencati in seguito si dividono per tipologia (funzionale, prestazionale, di qualit\`a, di interfacciamento, d'ambiente); 
-per ognuna \`e presente una classificazione per classe di importanza (obbligatorio, desiderabile, facoltativo). 
+per ognuna \`e presente una classificazione per classe di importanza (obbligatorio, desiderabile, facoltativo). Viene inoltre indicata la fonte usando un riferimento alle aspettative descritte in \textit{Aspettative.pdf}.
 \subsezione{Requisiti funzionali (RF)}
 \subsubsezione{Obbligatori (RFO)}
 \begin{elenconumerato}[\textbf{RFO-}]{\subsubsecindent}
-\item{AJAXDRAW permette di disegnare linee rette.}
-\item{AJAXDRAW permette di disegnare curve di Bezier.}
-\item{AJAXDRAW permette di disegnare quadrilateri di qualsiasi dimensione(quadrata o rettangolare).}
-\item{AJAXDRAW permette di disegnare poligoni regolari di qualsiasi dimensione e numero di lati.}
-\item{AJAXDRAW permette all'utente di disegnare cerchi o ellissi.}
-\item{AJAXDRAW permette di aggiungere caselle di testo al documento. }
-\item{AJAXDRAW permette la modifica del font e della dimensione del testo presente nelle caselle disegnate.}
-\item{Per ogni elemento disegnato, AJAXDRAW permette all'utente di selezionare e spostare tale elemento.}
-\item{AJAXDRAW permette di cambiare il colore di riempimento, del bordo, delle linee, dell'opacit\`a degli oggetti disegnati.}
-\item{AJAXDRAW permette il ridimensionamento degli oggetti disegnati.}
-\item{AJAXDRAW permette all'utente di selezionare ognuna delle funzionalit\`a suddette tramite una comoda barra degli strumenti.}
-\item{Qualora suddette funzioni siano regolate da parametri, AJAXDRAW permette all'utente di impostarli.}
-\item {Qualora il canvas risulti troppo grande per essere mostrato completamente su schermo, l'utente pu\`o spostare la visualizzazione per scorrerne le sue diverse parti.}
-\item{AJAXDRAW permette di effettuare uno zoom in avanti e all'indietro nel disegno.}
-\item{AJAXDRAW \`e in grado di salvare le immagini create dall'utente nel formato SVG.}
-\item{AJAXDRAW permette di caricare immagini in formato SVG che utilizzano il sottoinsieme che AJAXDRAW \`e in grado di generare.}
+\item{ACO-2 - AJAXDRAW permette di disegnare linee rette.}
+\item{ACO-2 - AJAXDRAW permette di disegnare curve di Bezier.}
+\item{ACO-2 - AJAXDRAW permette di disegnare quadrilateri di qualsiasi dimensione(quadrata o rettangolare).}
+\item{ACO-2 - AJAXDRAW permette di disegnare poligoni regolari di qualsiasi dimensione e numero di lati.}
+\item{ACO-2 - AJAXDRAW permette all'utente di disegnare cerchi o ellissi.}
+\item{ACO-2 - AJAXDRAW permette di aggiungere caselle di testo al documento. }
+\item{ACO-2 - AJAXDRAW permette la modifica del font e della dimensione del testo presente nelle caselle disegnate.}
+\item{ACO-2, ACO-3 - Per ogni elemento disegnato, AJAXDRAW permette all'utente di selezionare e spostare tale elemento.}
+\item{ACO-3 - AJAXDRAW permette di cambiare il colore di riempimento, del bordo, delle linee, dell'opacit\`a degli oggetti disegnati.}
+\item{ACO-3 - AJAXDRAW permette il ridimensionamento degli oggetti disegnati.}
+\item{ACO-2 - AJAXDRAW permette all'utente di selezionare ognuna delle funzionalit\`a suddette tramite una comoda barra degli strumenti.}
+\item{ACO-2 - Qualora suddette funzioni siano regolate da parametri, AJAXDRAW permette all'utente di impostarli.}
+\item {ACO-2 - Qualora il canvas risulti troppo grande per essere mostrato completamente su schermo, l'utente pu\`o spostare la visualizzazione per scorrerne le sue diverse parti.}
+\item{ACO-2 - AJAXDRAW permette di effettuare uno zoom in avanti e all'indietro nel disegno.}
+\item{ACO-4 - AJAXDRAW \`e in grado di salvare le immagini create dall'utente nel formato SVG.}
+\item{ACO-4 - AJAXDRAW permette di caricare immagini in formato SVG che utilizzano il sottoinsieme che AJAXDRAW \`e in grado di generare.}
 \end{elenconumerato}
 
 %requisiti desiderabili
 \subsubsezione{Desiderabili (RFD)}
 \begin{elenconumerato}[\textbf{RFD-}]{\subsubsecindent}
-\item{AJAXDRAW permette di disegnare a mano libera.}
-\item{AJAXDRAW permette di disegnare connettori per diagrammi.}
-\item{AJAXDRAW permette di cancellare completamente l'area di disegno.}
-\item{AJAXDRAW permette di cancellare un singolo oggetto disegnato.}
+\item{ACF-2 - AJAXDRAW permette di disegnare a mano libera.}
+\item{ACF-2 - AJAXDRAW permette di disegnare connettori per diagrammi.}
+\item{ACF-1 - AJAXDRAW permette di cancellare completamente l'area di disegno.}
+\item{ACF-1 - AJAXDRAW permette di cancellare un singolo oggetto disegnato.}
 \end{elenconumerato}
 
 %facoltativi
 \subsubsezione{Facoltativi (RFF)}
 \begin{elenconumerato}[\textbf{RFF-}]{\subsubsecindent}
-\item{AJAXDRAW permette la creazione di spirali.}
-\item{AJAXDRAW permette di utilizzare il disegno calligrafico o pennellato.}
+\item{ACF-2 - AJAXDRAW permette la creazione di spirali.}
+\item{ACF-2 - AJAXDRAW permette di utilizzare il disegno calligrafico o pennellato.}
 \end{elenconumerato}
 
 %requisiti prestazionali
 \subsezione{Requisiti prestazionali}
 \subsubsezione{Obbligatori (RPO)}
 \begin{elenconumerato}[\textbf{RPO-}]{\subsubsecindent}
-\item L'utente non deve notare rallentamenti durante l'utilizzo dell'applicazione che non siano direttamente imputabili alla lentezza della connessione.
+\item ACO-1 - L'utente non deve notare rallentamenti durante l'utilizzo dell'applicazione che non siano direttamente imputabili alla lentezza della connessione.
 \end{elenconumerato}
 
 %Requisiti di Qualità
 \subsezione{Requisiti di qualit\`a (RQ)}	
 \subsubsezione{Obbligatori (RQO)}
 \begin{elenconumerato}[\textbf{RQO-}]{\subsubsecindent}
-\item Il lato client dell'applicativo dev'essere realizzato usando tecnologie web standard
+\item ACO-5 - Il lato client dell'applicativo dev'essere realizzato usando tecnologie web standard
 \footnote{con il termine \H{}standard\H{} si intendono tecnologie effettivamente standardizzate come l'\underline{ECMAScript} o tecnologie considerate standard \textit{de facto} come quelle raccomandata dal \textit{W3C}.}
-\item Il codice sorgente segue le norme interne all'azienda.
-\item Il codice sorgente segue il paradigma della programmazione ad oggetti.
-\item Il codice sorgente \`e completamente documentato.
-\item La progettazione permetter\`a l'estensibilit\`a futura del prodotto.
-\item I test del prodotto saranno documentati.
-\item Il prodotto non necessita di nessuna installazione, basandosi su una pagina web HTML.
-\item Il server dev'essere in grado di gestire pi\`u utenti in parallelo in modo indipendente.
-\item Il funzionamento dell'applicazione dev'essere indipendente dalla risoluzione dello schermo dell'utente.
+\item ACO-8 - Il codice sorgente segue le norme interne all'azienda.
+\item ACO-8 - Il codice sorgente segue il paradigma della programmazione ad oggetti.
+\item ACO-8 - Il codice sorgente \`e completamente documentato.
+\item ACO-8 - La progettazione permetter\`a l'estensibilit\`a futura del prodotto.
+\item ACO-8 - I test del prodotto saranno documentati.
+\item ACO-5 - Il prodotto non necessita di nessuna installazione, basandosi su una pagina web HTML.
+\item ACO-5 - Il server dev'essere in grado di gestire pi\`u utenti in parallelo in modo indipendente.
+\item ACO-1 - Il funzionamento dell'applicazione dev'essere indipendente dalla risoluzione dello schermo dell'utente.
 \end{elenconumerato}
 
 %requisiti di qualita' desiderabili
@@ -764,26 +764,26 @@ per ognuna \`e presente una classificazione per classe di importanza (obbligator
 \subsezione{Requisiti di interfacciamento (RI)}
 \subsubsezione{Obbligatori (RIO)}
 \begin{elenconumerato}[\textbf{RIO-}]{\subsubsecindent}
-\item L'utilizzo del prodotto risulta semplice ed intuitivo grazie ad un'interfaccia grafica basata sull'uso di una toolbar.
-\item La guida in linea \`e completa e di facile utilizzo per permettere all'utente di apprendere velocemente le funzionalit\`a del prodotto.
-\item La guida in linea \`e richiamabile in qualsiasi momento.
-\item L'uso della guida in linea non influenza il corretto funzionamento del programma. 
+\item ACO-7 - L'utilizzo del prodotto risulta semplice ed intuitivo grazie ad un'interfaccia grafica basata sull'uso di una toolbar.
+\item ACO-7 - La guida in linea \`e completa e di facile utilizzo per permettere all'utente di apprendere velocemente le funzionalit\`a del prodotto.
+\item ACO-7 - La guida in linea \`e richiamabile in qualsiasi momento.
+\item ACO-7 - L'uso della guida in linea non influenza il corretto funzionamento del programma. 
 \end{elenconumerato}
 
 %inizio requisiti d'ambiente
 \subsezione{Requisiti d'ambiente (RA)}
 \subsubsezione{Obbligatori (RAO)}
 \begin{elenconumerato}[\textbf{RAO-}]{\subsubsecindent}
-\item Il prodotto \`e pensato per funzionare su un internet browser.
-\item Il prodotto dovr\`a essere implementato seguendo gli standard del \underline{linguaggio di markup} HTML 5.
-\item Il prodotto in particolare dovr\` a utilizzare il tag "canvas" appositamente creato per l'elaborazione del disegno vettoriale sul web.
-\item Il software di supporto per lo sviluppo del prodotto \`e di tipo Open Source e freeware.
-\item Il prodotto realizzato dovr\`a essere pubblicato sul sito \href{www.sourceforge.net}{www.sourceforge.net}, in conformit\`a con i relativi requisiti di natura Open Source, per favorire la continuit\`a del prodotto risultante.
-\item Il prodotto \`e sviluppato e testato sui principali internet browsers: Mozilla Firefox, Google Chrome, Opera ed Apple Safari.
+\item ACO-5 - Il prodotto \`e pensato per funzionare su un internet browser.
+\item ACO-5 - Il prodotto dovr\`a essere implementato seguendo gli standard del \underline{linguaggio di markup} HTML 5.
+\item ACO-6 - Il prodotto in particolare dovr\` a utilizzare il tag "canvas" appositamente creato per l'elaborazione del disegno vettoriale sul web.
+\item ACO-8 - Il software di supporto per lo sviluppo del prodotto \`e di tipo Open Source e freeware.
+\item ACD-1 - Il prodotto realizzato dovr\`a essere pubblicato sul sito \href{www.sourceforge.net}{www.sourceforge.net}, in conformit\`a con i relativi requisiti di natura Open Source, per favorire la continuit\`a del prodotto risultante.
+\item ACO-5 - Il prodotto \`e sviluppato e testato sui principali internet browsers: Mozilla Firefox, Google Chrome, Opera ed Apple Safari.
 \end{elenconumerato}
 \subsubsezione{Desiderabili (RAD)}
 \begin{elenconumerato}[\textbf{RAD-}]{\subsubsecindent}
-\item{AJAXDRAW garantisce la compatibilit\`a con il browser Microsoft Internet Explorer, il quale non implementa a pieno HTML 5, tramite la libreria \H{}excanvas\H{} creata da Google.}
+\item{ACF-3 - AJAXDRAW garantisce la compatibilit\`a con il browser Microsoft Internet Explorer, il quale non implementa a pieno HTML 5, tramite la libreria \H{}excanvas\H{} creata da Google.}
 \end{elenconumerato}
 
 
