PP: rimossa inutile elencazione di requisiti

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -342,46 +342,9 @@ Preventivo relativo alla fase Revisione dei requisiti-Revisione del progetto pre
 
 
 \subsezione{Pianificazione economico-temporale RPP-RQ}
-All'interno di questa fase avverranno le due iterazioni previste. I requisiti non funzionali verranno soddisfatti in modo trasversale rispetto alle due iterazioni. La prima iterazione inizier\`a immediatamente dopo l'RPP e si concluder\`a a met\`a della fase RPP-RQ. Al termine dell'iterazione verranno soddisfatti i seguenti requisiti funzionali:
-
-%%\begin{enumerate}
-\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
-\item RFO-1
-\item RFO-2
-\item RFO-3
-\item RFO-4
-\item RFO-5
-\item RFO-6
-\item RFO-7
-\item RFO-11 (parzialmente)
-\item RFO-15 (parzialmente)
-\item RFO-16 (parzialmente)
-\end{elenconumerato} 
-
-La seconda iterazione inizier\`a dopo la conclusione della prima. Al termine di questa iterazione il prodotto soddisfer\`a i seguenti requisiti funzionali:
-
-%%\begin{enumerate}
-\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
-\item RFO-8
-\item RFO-9
-\item RFO-10
-\item RFO-11 (completamente)
-\item RFO-12
-\item RFO-13
-\item RFO-14
-\item RFO-15 (completamente)
-\item RFO-16 (completamente)
-\end{elenconumerato}
-
-La seconda iterazione potr\`a inoltre soddisfare i seguenti requisiti funzionali in modo compatibile con le risorse disponibili:
-
-\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
-\item RFD-1
-\item RFD-2
-\item RFD-3
-\item RFD-4
-\end{elenconumerato}
-
+All'interno di questa fase avverranno le due iterazioni previste. I requisiti non funzionali verranno soddisfatti in modo trasversale rispetto alle due iterazioni. La prima iterazione inizier\`a immediatamente dopo l'RPP e si concluder\`a a met\`a della fase RPP-RQ. Al termine dell'iterazione verranno soddisfatti i requisiti funzionali obbligatori riguardanti il disegno di forme geometriche e testo e il relativo salvataggio/caricamento su file. Durante la seconda iterazione verranno soddisfatti i requisiti funzionali obbligatori non realizzati nella fase precedente. Potranno inoltre essere soddisfatti, in tutto o in parte, i requisiti funzionali desiderabili.
+\\
+\\
 Preventivo relativo alla fase Revisione del progetto preliminare-Revisione di qualifica.
 \begin{table}[h]
 	\begin{center}
